--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS World</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="js/index.js" type="module" defer></script>
+    <title>JS World</title>
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img src="/images/logo2.png" alt="Logo" class="logo" />
+      </a>
+      <section>
+        <a href="">
+          <img src="images/search.png" alt="Search" />
+        </a>
+
+        <a href="">
+          <img src="images/account.png" alt="Account" />
+        </a>
+
+        <label for="menu">
+          <img src="images/menu.png" alt="Menu" />
+        </label>
+        <input type="checkbox" name="menu" id="menu">
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Tutorials</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact us</a></li>
+          </ul>
+        </nav>
+      </section>
+    </header>
+    <main>
+      <h1>Javascript World</h1>
+      <p>... a blog with Javascript Tutorials</p>
+      <div class="carousel">
+        <div class="car-inner"></div>
+      </div>
+      <div class="carousel-nav">
+        <img src="/images/arrow-left.png" alt="Previous" id="previous" />
+        <img src="/images/circle.png" alt="Page 1" id="circle1" />
+        <img src="/images/circle-empty.png" alt="Page 2" id="circle2" />
+        <img src="/images/circle-empty.png" alt="Page 3" id="circle3" />
+        <img src="/images/arrow-right.png" alt="Next" id="next" />
+      </div>
+      <section class="start-learning">
+        <h2>Start Learning</h2>
+        <div class="learning-list">
+          
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html">Home</a>
+      <a href="">Tutorials</a>
+      <a href="">About us</a>
+      <a href="">Contact us</a>
+    </footer>
+  </body>
 </html>
