--- a/tutorials.html
+++ b/tutorials.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Javascript World ...a blog with Javascript Tutorials"
+      content="All the tutorials"
     />
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/index.js" type="module" defer></script>
-    <title>JS World</title>
+    <script src="js/tutorials.js" type="module" defer></script>
+    <title>JS World | Tutorials</title>
   </head>
   <body>
     <header>
@@ -47,21 +47,9 @@
       </section>
     </header>
     <main>
-      <h1>Javascript World</h1>
-      <p>... a blog with Javascript Tutorials</p>
-      <div class="carousel">
-        <div class="car-inner"></div>
-      </div>
-      <div class="carousel-nav">
-        <img src="/images/arrow-left.png" alt="Previous" id="previous" />
-        <img src="/images/circle.png" alt="Page 1" id="circle1" />
-        <img src="/images/circle-empty.png" alt="Page 2" id="circle2" />
-        <img src="/images/circle-empty.png" alt="Page 3" id="circle3" />
-        <img src="/images/arrow-right.png" alt="Next" id="next" />
-      </div>
-      <section class="start-learning">
-        <h2>Start Learning</h2>
-        <div class="learning-list"></div>
+      <h1>Javascript Tutorials</h1>
+      <section class="tutorials">
+        <div class="tutorials-list"></div>
       </section>
     </main>
     <footer>
