--- a/index.html
+++ b/index.html
@@ -15,60 +15,67 @@
     <title>JS World</title>
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img src="/images/logo.png" alt="Logo" class="logo" />
-      </a>
-      <section>
-        <label for="search">
-          <img src="images/search.png" alt="Search" />
-        </label>
-        <input type="checkbox" name="search" id="search">
-        <form action="search.html" method="GET" id="search-form">
-          <input type="text" id="searchFor" name="searchFor" placeholder="Press enter to search">
-        </form>
-
-        <a href="account.html">
-          <img src="images/account.png" alt="Account" />
+    <div class="wrapper">
+      <header>
+        <a href="index.html">
+          <img src="/images/logo.png" alt="Logo" class="logo" />
         </a>
+        <section>
+          <label for="search">
+            <img src="images/search.png" alt="Search" class="search-image" />
+          </label>
+          <input type="checkbox" name="search" id="search" />
+          <form action="search.html" method="GET" id="search-form">
+            <input
+              type="text"
+              id="searchFor"
+              name="searchFor"
+              placeholder="Press enter to search"
+            />
+          </form>
 
-        <label for="menu">
-          <img src="images/menu.png" alt="Menu" />
-        </label>
-        <input type="checkbox" name="menu" id="menu" />
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tutorials.html">Tutorials</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-          </ul>
-        </nav>
-      </section>
-    </header>
-    <main>
-      <h1>Javascript World</h1>
-      <p>... a blog with Javascript Tutorials</p>
-      <div class="carousel">
-        <div class="car-inner"></div>
-      </div>
-      <div class="carousel-nav">
-        <img src="/images/arrow-left.png" alt="Previous" id="previous" />
-        <img src="/images/circle.png" alt="Page 1" id="circle1" />
-        <img src="/images/circle-empty.png" alt="Page 2" id="circle2" />
-        <img src="/images/circle-empty.png" alt="Page 3" id="circle3" />
-        <img src="/images/arrow-right.png" alt="Next" id="next" />
-      </div>
-      <section class="start-learning">
-        <h2>Start Learning</h2>
-        <div class="learning-list"></div>
-      </section>
-    </main>
-    <footer>
-      <a href="index.html">Home</a>
-      <a href="tutorials.html">Tutorials</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact us</a>
-    </footer>
+          <a href="account.html">
+            <img src="images/account.png" alt="Account" class="account-image" />
+          </a>
+
+          <label for="menu">
+            <img src="images/menu.png" alt="Menu" class="menu-image" />
+          </label>
+          <input type="checkbox" name="menu" id="menu" />
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="tutorials.html">Tutorials</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
+            </ul>
+          </nav>
+        </section>
+      </header>
+      <main>
+        <h1>Javascript World</h1>
+        <p>... a blog with Javascript Tutorials</p>
+        <div class="carousel">
+          <div class="car-inner"></div>
+        </div>
+        <div class="carousel-nav">
+          <img src="/images/arrow-left.png" alt="Previous" id="previous" />
+          <img src="/images/circle.png" alt="Page 1" id="circle1" />
+          <img src="/images/circle-empty.png" alt="Page 2" id="circle2" />
+          <img src="/images/circle-empty.png" alt="Page 3" id="circle3" />
+          <img src="/images/arrow-right.png" alt="Next" id="next" />
+        </div>
+        <section class="start-learning">
+          <h2>Start Learning</h2>
+          <div class="learning-list"></div>
+        </section>
+      </main>
+      <footer>
+        <a href="index.html">Home</a>
+        <a href="tutorials.html">Tutorials</a>
+        <a href="about.html">About us</a>
+        <a href="contact.html">Contact us</a>
+      </footer>
+    </div>
   </body>
 </html>
