--- a/tutorials.html
+++ b/tutorials.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="All the tutorials"
-    />
+    <meta name="description" content="All the tutorials" />
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -15,48 +12,56 @@
     <title>JS World | Tutorials</title>
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img src="/images/logo.png" alt="Logo" class="logo" />
-      </a>
-      <section>
-        <label for="search">
-          <img src="images/search.png" alt="Search" />
-        </label>
-        <input type="checkbox" name="search" id="search">
-        <form action="search.html" method="GET" id="search-form">
-          <input type="text" id="searchFor" name="searchFor" placeholder="Press enter to search">
-        </form>
-
-        <a href="account.html">
-          <img src="images/account.png" alt="Account" />
+    <div class="wrapper">
+      <header>
+        <a href="index.html">
+          <img src="/images/logo.png" alt="Logo" class="logo" />
         </a>
+        <section>
+          <label for="search">
+            <img src="images/search.png" alt="Search" class="search-image" />
+          </label>
+          <input type="checkbox" name="search" id="search" />
+          <form action="search.html" method="GET" id="search-form">
+            <input
+              type="text"
+              id="searchFor"
+              name="searchFor"
+              placeholder="Press enter to search"
+            />
+          </form>
 
-        <label for="menu">
-          <img src="images/menu.png" alt="Menu" />
-        </label>
-        <input type="checkbox" name="menu" id="menu" />
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tutorials.html">Tutorials</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-          </ul>
-        </nav>
-      </section>
-    </header>
-    <main>
-      <h1>Javascript Tutorials</h1>
-      <section class="tutorials">
-        <div class="tutorials-list"></div>
-      </section>
-    </main>
-    <footer>
-      <a href="index.html">Home</a>
-      <a href="tutorials.html">Tutorials</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact us</a>
-    </footer>
+          <a href="account.html">
+            <img src="images/account.png" alt="Account" class="account-image" />
+          </a>
+
+          <label for="menu">
+            <img src="images/menu.png" alt="Menu" class="menu-image" />
+          </label>
+          <input type="checkbox" name="menu" id="menu" />
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="tutorials.html">Tutorials</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
+            </ul>
+          </nav>
+        </section>
+      </header>
+      <main>
+        <h1>Javascript Tutorials</h1>
+        <section class="tutorials">
+          <div class="tutorials-list"></div>
+        </section>
+        <div id="tutorials-paging"></div>
+      </main>
+      <footer>
+        <a href="index.html">Home</a>
+        <a href="tutorials.html">Tutorials</a>
+        <a href="about.html">About us</a>
+        <a href="contact.html">Contact us</a>
+      </footer>
+    </div>
   </body>
 </html>
