--- a/tutorials.html
+++ b/tutorials.html
@@ -51,6 +51,7 @@
       </header>
       <main>
         <h1>Javascript Tutorials</h1>
+        <div id="tutorials-paging"></div>
         <section class="tutorials">
           <div class="tutorials-list"></div>
         </section>
