tutorial.html and menu corrections

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
           </label>
           <input type="checkbox" name="menu" id="menu" />
           <nav>
+            <span class="menu-title">Menu</span>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="tutorials.html">Tutorials</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </ul>
+            <img src="images/logo.png" alt="JS World" class="nav--img">
           </nav>
         </section>
       </header>
