--- a/tutorial.html
+++ b/tutorial.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/tutorials.js" type="module" defer></script>
-    <title>JS World | Tutorials</title>
+    <script src="js/tutorial.js" type="module" defer></script>
+    <title>JS World | Tutorial |</title>
   </head>
   <body>
     <div class="wrapper">
@@ -47,16 +47,27 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </ul>
-            <img src="images/logo.png" alt="JS World" class="nav--img">
+            <img src="images/logo.png" alt="JS World" class="nav--img" />
           </nav>
         </section>
       </header>
       <main>
-        <h1>Javascript Tutorials</h1>
-        <div id="tutorials-paging"></div>
-        <section class="tutorials">
-          <div class="tutorials-list"></div>
-        </section>
+        <div class="back-container">
+          <a href="tutorials.html">
+            <img src="/images/arrow-left.png" alt="back to tutorials" />
+            Tutorials
+          </a>
+        </div>
+
+        <h1 class="tutorial-title"></h1>
+        <article class="tutorial"></article>
+        <div class="modal-window">
+          <span class="close--btn">X</span>
+          <figure>
+            <img class="modal-window--img" />
+            <figcaption class="modal-window--figcaption"></figcaption>
+          </figure>
+        </div>
       </main>
       <footer>
         <a href="index.html">Home</a>
