tutorial.html and about.html

--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="JS World was created in 2021, and derives its name from the Javascript.
+        We like easy learning so we focus on simple examples and easy to understand
+        illustrations. />
     <meta name="keywords" content="Javascript, js, tutorials, world, about, us" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -59,7 +61,22 @@
             We like easy learning so we focus on simple examples and easy to understand
             illustrations.
           </p>
-          <img src="/images/logo.png" alt="about us logo image">
+          <img src="/images/logo-big.png" alt="about us logo image">
+          <p>
+            JS World is free and it be free for ever. We want our users to acquire as
+            many skills as they would like to. 
+          </p>
+          <p>
+            You can read all the tutorial without registration. It is simple, select or
+            search which one you wish to read and just read it. Registration is only 
+            required if you the user wants to comment to a tutorial.
+          </p>
+          <p>
+             If you have any suggestions,
+            if you find an error or you have any kind of problem then 
+            <a href="">contact us</a>.
+
+          </p>
         </article>
        
       </main>
