--- a/account-details.html
+++ b/account-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="User Registration/Login" />
+    <meta name="description" content="User account" />
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -54,53 +54,7 @@
 
       <main>
         <h1>Registration / Log in</h1>
-        <hr />
-        <h2>Register</h2>
-        <form method="GET" id="registration--form">
-          <label for="reg-username">
-            Username
-            <input type="text" name="reg-username" id="reg-username" required tabindex="1"/>
-          </label>
-          <label for="reg-email">
-            Email
-            <input type="email" name="reg-email" id="reg-email" required  tabindex="2"/>
-          </label>
-          <label for="reg-password">
-            Password
-            <input type="password" name="reg-password" id="reg-password" required tabindex="3"/>
-          </label>
-          <label for="reg-password2">
-            Password again
-            <input type="password" name="reg-password2" id="reg-password2" required tabindex="4"/>
-          </label>
-          <p id="reg-error"></p>
-          <button type="submit" disabled  tabindex="5">Register</button>
-
-        </form>
-        <p id="msg-login">
-          Do you have an account? Then,
-          <a href="#login">Log in</a>
-        </p>
-        <hr />
-        <div id="page2">
-          <h2 id="login">Login</h2>
-          <form method="GET" id="login--form">
-            <label for="log-username">
-              Username
-              <input type="text" name="log-username" id="log-username" required />
-            </label>
-            <label for="reg-password">
-              Password
-              <input type="password" name="log-password" id="rlogeg-password" required/>
-            </label>
-            <button type="submit">Log in</button>
-            <p id="log-error"></p>
-          </form>
-          <p id="msg-register">
-            You don't have an account? Then,
-            <a href="#register">register</a>
-          </p>
-        </div>
+       
       </main>
 
       <footer>
