--- a/account.html
+++ b/account.html
@@ -82,10 +82,10 @@
         </form>
         <p id="msg-register">
           You don't have an account? Then,
-          <a href="#page2">register</a>
+          <a href="#reg-page">register</a>
         </p>
 
-        <div id="page2">
+        <div id="reg-page">
           <h2>Register</h2>
           <form method="GET" id="registration--form">
             <label for="reg-username">
