--- a/account-details.html
+++ b/account-details.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="User account" />
+    <meta name="description" content="View or edit your account" />
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/account-details.js" type="module" defer></script>
-    <title>JS World | Account | </title>
+    <title>JS World | Your Account </title>
   </head>
   <body  id="register">
     <div class="wrapper">
