--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="JS World was created in 2021, and derives its name from the Javascript.
-        We like easy learning so we focus on simple examples and easy to understand
-        illustrations. />
-    <meta name="keywords" content="Javascript, js, tutorials, world, about, us" />
+    <meta name="description" content="Do you have a suggestion or question? Contact us" />
+    <meta name="keywords" content="Javascript, js, tutorials, world, contact" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>JS World | About Us</title>
+    <script src="js/contact.js" type="module" defer></script>
+    <title>JS World | Contact us</title>
   </head>
-  <body>
+  <body id="login">
     <div class="wrapper">
       <header>
         <a href="index.html">
@@ -52,34 +51,31 @@
           </nav>
         </section>
       </header>
+
       <main>
-
-        <h1>About Us</h1>
-        <article class="about-us-container">
-          <p>
-            JS World was created in 2021, and derives its name from the Javascript.
-            We like easy learning so we focus on simple examples and easy to understand
-            illustrations.
-          </p>
-          <img src="/images/logo-big.png" alt="about us logo image">
-          <p>
-            JS World is free and it be free for ever. We want our users to acquire as
-            many skills as they would like to. 
-          </p>
-          <p>
-            You can read all the tutorial without registration. It is simple, select or
-            search which one you wish to read and just read it. Registration is only 
-            required if you the user wants to comment to a tutorial.
-          </p>
-          <p>
-             If you have any suggestions,
-            if you find an error or you have any kind of problem then 
-            <a href="contact.html">contact us</a>.
-
-          </p>
-        </article>
-       
+        <h1>Contact us</h1>
+        <form method="GET" id="contact--form">
+          <label for="usermame">
+            Name
+            <input type="text" name="username" id="username" required />
+          </label>
+          <label for="email">
+            Email
+            <input type="email" name="name" id="name" required />
+          </label>
+          <label for="subject">
+            Subject
+            <input type="text" name="subject" id="subject" required />
+          </label>
+          <label for="message">
+            Message
+            <textarea name="message" id="messag" required></textarea>
+          </label>
+          <button type="submit">Send</button>
+          <p id="log-error"></p>
+        </form>
       </main>
+
       <footer>
         <a href="index.html">Home</a>
         <a href="tutorials.html">Tutorials</a>
