--- a/search.html
+++ b/search.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/search.js" type="module" defer></script>
     <title>JS World | Search </title>
+    
+    <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2368922,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </head>
   <body>
     <div class="wrapper">
