contact us added

--- a/account.html
+++ b/account.html
@@ -65,9 +65,9 @@
       </header>
 
       <main>
-        <h1>Log in / Register</h1>
+        <h1 id="login">Log in / Register</h1>
         <hr />
-        <h2 id="login">Login</h2>
+        <h2 >Login</h2>
         <form method="GET" id="login--form">
           <label for="log-username">
             Username
