--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
           </label>
           <label for="email">
             Email
-            <input type="email" name="name" id="name" required />
+            <input type="email" name="email" id="email" required />
           </label>
           <label for="subject">
             Subject
@@ -81,9 +81,9 @@
           </label>
           <label for="message">
             Message
-            <textarea name="message" id="messag" required></textarea>
+            <textarea name="message" id="message" required></textarea>
           </label>
-          <button type="submit">Send</button>
+          <button type="submit" disabled>Send</button>
           <p id="log-error"></p>
         </form>
       </main>
