--- a/tutorial.html
+++ b/tutorial.html
@@ -80,6 +80,13 @@
             <figcaption class="modal-window--figcaption"></figcaption>
           </figure>
         </div>
+        <section id="comments">
+          <h2>Comments</h2>
+          <p id="login-warning"><a href="account.html#login">Login</a> or <a href="account.html#reg-page">Register</a> to post your comments</p>
+          <div id="comment-list">
+
+          </div>
+        </section>
       </main>
       <footer>
         <a href="index.html">Home</a>
