--- a/tutorial.html
+++ b/tutorial.html
@@ -86,6 +86,14 @@
           <div id="comment-list">
 
           </div>
+          <form id="comment--form">
+            Your comment
+            <label for="comment">
+              <textarea name="comment" id="comment"></textarea>
+            </label>
+            <button type="submit" disabled>Post</button>
+            <p id="com-feedback"></p>
+          </form>
         </section>
       </main>
       <footer>
