--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           </p>
           <img src="/images/logo-big.png" alt="about us logo image">
           <p>
-            JS World is free and it be free for ever. We want our users to acquire as
+            JS World is free and it will be free for ever. We want our users to acquire as
             many skills as they would like to. 
           </p>
           <p>
