--- a/account-details.html
+++ b/account-details.html
@@ -69,7 +69,7 @@
         <ul class="account-nav">
           <li><a href="#edit">Personal Information</a></li>
           <li><a href="#pass">Password</a></li>
-          <li><a href="#posts">Posts</a></li>
+          <li><a href="#comments">Comments</a></li>
           <li><a href="" id="logout">Logout</a></li>
         </ul>
         <hr>
@@ -125,9 +125,9 @@
           </section>
         </div>
         <hr>
-        <div id="posts">
-          <h2>Your posts</h2>
-          <section class="container">
+        <div id="comments">
+          <h2>My comments</h2>
+          <section class="container" id="my-comments">
             
           </section>
         </div>
