--- a/tutorial.html
+++ b/tutorial.html
@@ -82,7 +82,7 @@
         </div>
         <section id="comments">
           <h2>Comments</h2>
-          <p id="login-warning"><a href="account.html#login">Login</a> or <a href="account.html#reg-page">Register</a> to post your comments</p>
+          <p id="login-warning"><a href="account.html#login">Login</a> or <a href="account.html#reg-page">Register</a> to post your comment</p>
           <div id="comment-list">
 
           </div>
@@ -91,8 +91,8 @@
             <label for="comment">
               <textarea name="comment" id="comment"></textarea>
             </label>
-            <button type="submit" disabled>Post</button>
             <p id="com-feedback"></p>
+            <button type="submit" disabled>Post</button>
           </form>
         </section>
       </main>
