--- a/account.html
+++ b/account.html
@@ -124,9 +124,10 @@
             <a href="#login">Log in</a>
           </p>
         </div>
+        <div class="empty"></div>
       </main>
 
-      <footer>
+      <footer class="fixed">
         <a href="index.html">Home</a>
         <a href="tutorials.html">Tutorials</a>
         <a href="about.html">About us</a>
