--- a/account-details.html
+++ b/account-details.html
@@ -64,7 +64,7 @@
         </section>
       </header>
 
-      <main>
+      <main id="top">
         <h1>Your Account</h1>
         <ul class="account-nav">
           <li><a href="#edit">Personal Information</a></li>
@@ -122,6 +122,7 @@
               <button type="submit" disabled>Save</button>
               <span id="feedback-password"></span>
             </form>
+            <a href="#top" class="to-top">Top</a>
           </section>
         </div>
         <hr>
@@ -130,6 +131,7 @@
           <section class="container" id="my-comments">
             
           </section>
+          <a href="#top" class="to-top">Top</a>
         </div>
       </main>
 
