--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/index.js" type="module" defer></script>
     <title>JS World</title>
-    
+
     <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
     <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:2368922,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2368922, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
   </head>
   <body>
@@ -62,15 +67,19 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </ul>
-            <img src="images/logo.png" alt="JS World" class="nav--img">
+            <img src="images/logo.png" alt="JS World" class="nav--img" />
           </nav>
         </section>
       </header>
       <main>
         <h1>Javascript World</h1>
         <p>... a blog with Javascript Tutorials</p>
-        <div class="carousel">
-          <div class="car-inner"></div>
+        <div class="main">
+          <div class="left-big"><img src="/images/left.png" alt="previous page"></div>
+          <div class="carousel">
+            <div class="car-inner"></div>
+          </div>
+          <div class="right-big"><img src="/images/right.png" alt="next page"></div>
         </div>
         <div class="carousel-nav">
           <img src="/images/arrow-left.png" alt="Previous" id="previous" />
