--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Javascript, js, tutorials, world, contact" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/contact.js" type="module" defer></script>
+    <script src="js/contact.js" type="module" ></script>
     <title>JS World | Contact us</title>
     
     <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
