--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/index.js" type="module" defer></script>
+    <script src="js/index.js" type="module" ></script>
     <title>JS World</title>
 
     <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
