--- a/tutorial.html
+++ b/tutorial.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/tutorial.js" type="module" defer></script>
+    <script src="js/tutorial.js" type="module" ></script>
     <title>JS World | Tutorial |</title>
     
     <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
