--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
@@ -69,7 +70,7 @@
         <form method="GET" id="contact--form">
           <label for="usermame">
             Name
-            <input type="text" name="username" id="username" required />
+            <input type="text" name="username" id="username" title="Name" required />
           </label>
           <label for="email">
             Email
