--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
