--- a/tutorial.html
+++ b/tutorial.html
@@ -36,6 +36,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
@@ -76,7 +77,7 @@
         <div class="modal-window">
           <span class="close--btn">X</span>
           <figure>
-            <img class="modal-window--img" />
+            <img class="modal-window--img" alt="full size image"/>
             <figcaption class="modal-window--figcaption"></figcaption>
           </figure>
         </div>
@@ -87,8 +88,8 @@
 
           </div>
           <form id="comment--form">
-            Your comment
             <label for="comment">
+              Your comment
               <textarea name="comment" id="comment"></textarea>
             </label>
             <p id="com-feedback"></p>
