--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
