--- a/account-details.html
+++ b/account-details.html
@@ -36,6 +36,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
@@ -104,6 +105,7 @@
               <button type="submit">Save</button>
               <span id="feedback-personal"></span>
             </form>
+            <a href="#top" class="to-top">Top</a>
           </section>
         </div>
         <hr>
