--- a/account.html
+++ b/account.html
@@ -8,22 +8,27 @@
     <meta name="keywords" content="Javascript, js, tutorials, world" />
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/account.js" type="module" ></script>
+    <script src="js/account.js" type="module"></script>
     <title>JS World | Account</title>
-    
+
     <!-- Hotjar Tracking Code for https://jsworldkronos.netlify.app/ -->
     <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:2368922,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2368922, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
   </head>
-  <body id="login">
+  <body>
     <div class="wrapper">
       <header>
         <a href="index.html">
@@ -36,6 +41,7 @@
           <input type="checkbox" name="search" id="search" />
           <form action="search.html" method="GET" id="search-form">
             <input
+              title="Search"
               type="text"
               id="searchFor"
               name="searchFor"
@@ -64,10 +70,10 @@
         </section>
       </header>
 
-      <main>
-        <h1 id="login">Log in / Register</h1>
+      <main id="login">
+        <h1>Log in / Register</h1>
         <hr />
-        <h2 >Login</h2>
+        <h2>Login</h2>
         <form method="GET" id="login--form">
           <label for="log-username">
             Username
@@ -82,6 +88,7 @@
           <label for="reg-password">
             Password
             <input
+              title="Password"
               type="password"
               name="log-password"
               id="log-password"
@@ -110,7 +117,13 @@
             </label>
             <label for="reg-password">
               Password
-              <input type="password" name="reg-password" id="reg-password" required />
+              <input
+                type="password"
+                name="reg-password"
+                id="reg-password"
+                title="Password"
+                required
+              />
             </label>
             <label for="reg-password2">
               Password again
