day 9 almost finished the desktop. Some bugs left

--- a/account.html
+++ b/account.html
@@ -53,7 +53,7 @@
             <img src="images/account.png" alt="Account" class="account-image" />
           </a>
 
-          <label for="menu">
+          <label for="menu" id="menu-label">
             <img src="images/menu.png" alt="Menu" class="menu-image" />
           </label>
           <input type="checkbox" name="menu" id="menu" />
