--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="images/account.png" alt="Account" class="account-image" />
           </a>
 
-          <label for="menu">
+          <label for="menu" class="menu--label">
             <img src="images/menu.png" alt="Menu" class="menu-image" />
           </label>
           <input type="checkbox" name="menu" id="menu" />
@@ -78,7 +78,7 @@
         <div class="main">
           <div class="left-big"><img src="/images/left.png" alt="previous page"></div>
           <div class="carousel">
-            <div class="car-inner"></div>
+            <div class="carousel-inner"></div>
           </div>
           <div class="right-big"><img src="/images/right.png" alt="next page"></div>
         </div>
