--- a/search.html
+++ b/search.html
@@ -68,7 +68,7 @@
         <h1>Search for</h1>
         <div id="tutorials-paging"></div>
         <section class="tutorials">
-          <div class="tutorials-list"></div>
+          <div class="search-list"></div>
         </section>
       </main>
       <footer>
