--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <nav>
             <span class="menu-title">Menu</span>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html" class="selected">Home</a></li>
               <li><a href="tutorials.html">Tutorials</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
