--- a/tutorials.html
+++ b/tutorials.html
@@ -56,7 +56,7 @@
             <span class="menu-title">Menu</span>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="tutorials.html">Tutorials</a></li>
+              <li><a href="tutorials.html" class="selected">Tutorials</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </ul>
