--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="tutorials.html">Tutorials</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="contact.html">Contact us</a></li>
+              <li><a href="contact.html"  class="selected">Contact us</a></li>
             </ul>
             <img src="images/logo.png" alt="JS World" class="nav--img" />
           </nav>
