--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </header>
       <main>
         <h1>Javascript World</h1>
-        <p>... a blog with Javascript Tutorials</p>
+        <p>... a blog with JavaScript Tutorials</p>
         <div class="main">
           <div class="left-big"><img src="/images/left.png" alt="previous page"></div>
           <div class="carousel">
