--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
           </div>
           <div class="right-big"><img src="/images/right.png" alt="next page"></div>
         </div>
+        <div>
+          <img class="autoplay" src="/images/autoplay-enabled.png" alt="autoplay carousel">
+        </div>
         <div class="carousel-nav">
           <img src="/images/arrow-left.png" alt="Previous" id="previous" />
           <img src="/images/circle.png" alt="Page 1" id="circle1" />
