tutorial added image and date,

--- a/tutorial.html
+++ b/tutorial.html
@@ -73,6 +73,13 @@
         </div>
 
         <h1 class="tutorial-title"></h1>
+        <div class="info--div">
+          <img class="author--img">
+          <div>
+            <span class="author" ></span>
+            <p id="date"></p> 
+          </div>
+        </div> 
         <article class="tutorial"></article>
         <div class="modal-window">
           <span class="close--btn">X</span>
