--- a/tutorials.html
+++ b/tutorials.html
@@ -65,7 +65,7 @@
         </section>
       </header>
       <main>
-        <h1>Javascript Tutorials</h1>
+        <h1>JavaScript Tutorials</h1>
         <div id="tutorials-paging"></div>
         <section class="tutorials">
           <div class="tutorials-list"></div>
