--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
       </header>
       <main>
-        <h1>Javascript World</h1>
+        <h1>JavaScript World</h1>
         <p>... a blog with JavaScript Tutorials</p>
         <div class="main">
           <div class="left-big"><img src="/images/left.png" alt="previous page"></div>
